# latex-solidity

./: .gitignore  .gitlab-ci.yml  CHANGELOG.rst  LICENSE.txt  README.md  README.rst  example.sol  example.yul  init.sh  pyproject.toml  setup.py
latex/: main.tex
pygments_lexer_solidity/: lexer.py  solidity.py
test/: test-html.sh
