[tool.poetry]
name = "latex-solidity"
version = "0.1.0"
description = "pygments solidity"
authors = ["Your Name <you@example.com>"]
license = "BSD-2"

[tool.poetry.dependencies]
python = "^3.7"
Pygments = "^2.12.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
